[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mrna-hematology-research"
version = "0.1.0"
description = "Analysis of publicly available Norwegian cancer incidence data for trends in hematological malignancies (MDS/AML)"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "ovehe"},
]
keywords = ["cancer", "incidence", "hematology", "MDS", "AML", "Norway", "public-data"]

dependencies = [
    "pandas>=2.1",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "requests>=2.31",
    "pdfplumber>=0.10",
    "openpyxl>=3.1",
    "scipy>=1.11",
    "jupyter>=1.0",
    "pyjstat>=2.4",
    "httpx>=0.27",
    "fingertips_py>=0.4",
    "xlrd>=2.0",
    "lxml>=5.0",
    "duckdb>=1.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 120
